# excel-row-reader

./: .gitignore  Cargo.toml  README.md  example.csv  example.xls  example.xlsb  example.xlsm  example.xlsx  index.d.ts  index.js  package-lock.json  package.json  simple-test.js
.github/workflows/: CI.yaml
__test__/: index.spec.ts
benchmark/: bench.ts
npm/android-arm64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/freebsd-x64/: package.json
npm/linux-arm-gnueabihf/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-ia32-msvc/: package.json
npm/win32-x64-msvc/: package.json
src/: lib.rs
