[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "rusty-excel-reader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
#napi = {version = "1.7.5", features=["napi8"]} # necessary for the create_date fn
napi = "1.7.5"
napi-derive = "1"
calamine = {version = "0.18.0", features = ["dates"]}
#calamine = "0.18.0"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
